index.css
body {
    height: 100vh;
    margin: 0;

    font-family: 'Open Sans', sans-serif;
}

.container {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    justify-content: center;
    align-items: center;
}

.header {
    display: flex;
    flex-basis: 30vh;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-end;
}

.main {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-basis: 30vh;
    margin-top: 30px;
    flex-wrap: wrap;
    width: 28vw;
    min-width: 300px;
}

.heading {
    font-family: 'Open Sans', sans-serif;
    font-size: 36px;
    font-weight: 700;
    line-height: 43px;
}

textarea {
    padding: 14px 16px;
    height: 80px;
    min-height: 120px;
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    font-weight: 400;
    line-height: 22px;
    border: 1px solid rgb(226, 232, 240);
    transition-duration: 0.2s;
    outline-color: rgba(0, 0, 0, 0);
    border-radius: 6px;
    padding-inline: 16px;
    width: 100%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

textarea:active, textarea:focus-visible {
    outline-color: rgb(99, 164, 241);
}

button {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    padding: 0 16px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    font-size: 16px;
    line-height: 20px;
    background-color: rgb(49, 130, 206);
    border: 1px solid rgb(226, 232, 240);
    outline-color: rgba(0, 0, 0, 0);
    transition-duration: 0.2s;
    border-radius: 6px;
    padding-inline: 16px;
    cursor: pointer;
    color: white;
}

button:active, button:focus-visible {
    outline-color: rgb(99, 164, 241);
}

button.decrypt {
    background-color: rgb(213, 63, 140);
}

.delay-animation {
    transition-duration: .8s;
}

button.decrypt:hover {
    background-color: rgb(184, 50, 128);
}

button:hover {
    background-color: rgb(43, 108, 176);
}

.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

input[type=text] {
    padding: 0 16px;
    min-height: 40px;
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    word-spacing: 0;
    color: rgb(45, 55, 72);
    background-color: rgba(0, 0, 0, 0);
    border: 1px solid rgb(226, 232, 240);
    transition-duration: 0.2s;
    border-radius: 6px;
    padding-inline: 16px;
    font-family: 'Open Sans', sans-serif;
    outline-color: rgba(0, 0, 0, 0);
    z-index: 0;
}

input[type=text]:active, input[type=text]:focus-visible {
    outline-color: rgb(99, 164, 241);
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider {
    background-color: #2196F3;
}

input:focus + .slider {
    box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

#message, #key, #result {
    text-transform: lowercase;
}

#result {
    color: #6c757d;
}

#encryptBtn {
    flex-basis: 60px;
    border-radius: 0 6px 6px 0;
    z-index: 1;
}

.visible {
    visibility: visible;
    opacity: 1;
    transition: opacity .2s linear;
}

.hidden {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s 1.25s, opacity 1.25s linear;
}

